sas-core/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>A single booking containing possible several segments and passengers. 

Bookings are identified uniquely by a booking identifier, and mostly uniquely the 6 character booking reference.</description>
    <label>Booking</label>
    <nameField>
        <label>Booking Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>