sas-core/main/default/objects/Booking__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <description>The six character reference for this booking. Not necessarily unique.</description>
    <inlineHelpText>The six character reference for this booking.</inlineHelpText>
    <label>Booking Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>