sas-core/main/default/objects/Booking__c/fields/Created_at_Travel_Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_at_Travel_Office_Id__c</fullName>
    <description>Office Id where this booking was created. Based on audit.created.officeId TEDS field.</description>
    <inlineHelpText>Office Id where this booking was created.</inlineHelpText>
    <label>Created at Travel Office Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>