sas-core/main/default/objects/Booking__c/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this booking has been cancelled.</description>
    <inlineHelpText>Whether this booking has been cancelled.</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>