sas-core/main/default/objects/Booking__c/fields/Is_Staff_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Staff_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this booking was booked using airline staff discounts</description>
    <label>Is Staff Booking</label>
    <type>Checkbox</type>
</CustomField>