sas-core/main/default/objects/Booking__c/fields/TEDS_Identifier__c.field-meta.xml
<CustomField>
    <fullName>TEDS_Identifier__c</fullName>
    <description>Unique identifier of this booking. Six character PNR followed by date.</description>
    <externalId>true</externalId>
    <label>TEDS Identifier</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>