sas-core/main/default/objects/Booking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Booking type, one of DayReturn, MultiCity, OneWay, RoundTrip or Unknown.</description>
    <inlineHelpText>Booking type, one of DayReturn, MultiCity, OneWay, RoundTrip or Unknown.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DayReturn</fullName>
            </value>
            <value>
                <fullName>MultiCity</fullName>
            </value>
            <value>
                <fullName>OneWay</fullName>
            </value>
            <value>
                <fullName>RoundTrip</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>